--- a/package.json
+++ b/package.json
@@ -5,20 +5,40 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:analyzer": "ANALYZE=true yarn build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "json-server -d 750 -w -p 3333 ./server.js"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^12.2.5",
+    "lodash": "^4.17.21",
     "next": "12.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^17",
+    "react-dom": "^17",
+    "react-virtualized": "^9.22.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.184",
     "@types/node": "18.7.11",
-    "@types/react": "18.0.17",
+    "@types/react": "^17",
     "@types/react-dom": "18.0.6",
-    "eslint": "8.22.0",
+    "@types/react-virtualized": "^9.21.21",
+    "@typescript-eslint/eslint-plugin": "^5.34.0",
+    "@typescript-eslint/parser": "^5.34.0",
+    "eslint": "^8.22.0",
     "eslint-config-next": "12.2.5",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react": "^1.1.7",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "json-server": "^0.17.0",
+    "prettier": "^2.7.1",
     "typescript": "4.7.4"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   }
 }
